<resources>
    <string name="app_dir">KtvAssistant</string>
    <string name="app_name">新浪KTV助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="soft_error">抱歉,程序出错啦!</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="no_networking">无法连接到网络,请检查网络设置</string>
    <string name="scan_nonsupport_tips">无法正常扫描？还可以手动输入密码喔!</string>
    <string name="scan_tips">请将二维码放入框内，即可自动扫描</string>
    <string name="scan_error">扫描结果错误，请重新扫描或联系服务人员</string>
    <string name="msg_load_ing">加载中....</string>
    <string name="msg_login_ing">登录中....</string>
    <string name="msg_logout_ing">正在退出....</string>
    <string name="app_update_title">更新</string>
    <string name="app_update_btntext1">马上更新</string>
    <string name="app_update_btntext2">以后再说</string>
    <string name="app_update_latest_message">您目前的版本是最新的,无需更新</string>
    <string name="app_update_forced_message">您目前的版本已过时,需要更新版本后才能继续使用!</string>
    <string name="title_room">包厢点歌</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入歌名、歌手进行搜索</string>
    <string name="search_input_empty_tips">搜索内容不能为空</string>
    <string name="title_pre">歌曲预点</string>
    <string name="title_daoru">导入预点歌曲</string>
    <string name="title_prelist">预点歌列表</string>
    <string name="input_command">请输入包厢密码</string>
    <string name="into_box">进入包厢</string>
    <string name="into_box_text">请填写收款单上的包厢密码,或在包厢点歌台中也可找到密码哦!</string>
    <string name="empty_tips">没有数据哟~~</string>
    <string name="empty_collect_tips">您暂时没有收藏歌曲</string>
    <string name="empty_ordered_tips">您还未点歌哟，快去点歌吧!</string>
    <string name="empty_ordered_tips2">包厢里只有一首歌正在播放哟,请您继续点歌吧</string>
    <string name="app_update_dialog_title">更新</string>
    <string name="app_update_dialog_ok_message">已是最新版本!</string>
    <string name="app_update_dialog_new_found">发现新版本</string>
    <string name="app_update_dialog_update_button">下载并安装</string>
    <string name="app_update_dialog_mistake_message">对不起,更新失败!请检查您的网络!</string>
    <string name="view_refresh_pull_label">下拉可以刷新</string>
    <string name="view_refresh_time_text">更新于：</string>
    <string name="view_refresh_release_label">松开可以刷新</string>
    <string name="view_refresh_pull_up">上拉可以刷新</string>
    <string name="view_refresh_refreshing_label">加载中...</string>
    <string name="more_about_text">关于</string>
    <string name="loading_text">正在进入请稍后...</string>
    <string name="command_qualified_text">密码为空或格式错误,请重新输入!</string>
    <string name="FeedbackText">感谢您对新浪KTV助手的关注与支持！欢迎您提交任何与新浪KTV助手相关的意见或建议,我们将会在第一时间处理问题。</string>
    <string name="net_none">网络不好啦</string>
    <string name="click_quickly">矮油,太快了啦!</string>
    <string name="msg_login_room">请登录包厢</string>
    <string name="msg_login_system">请登录</string>
    <string name="title_scan_enterroom">扫描进入包厢</string>
    <string name="title_scan_getgold">扫取包厢金币</string>
    <string name="title_scan_code">二维码/条码</string>
    <string name="home_nologin_tips">立即登录</string>
    <string name="game">游戏互动</string>
    <string name="enter_room">进入包厢</string>
    <string name="room_info">所在包厢：%1$s</string>
    <string name="order">点歌</string>
    <string name="ordered">已点</string>
    <string name="collect">收藏</string>
    <string name="scan">扫一扫</string>
    <string name="top">置顶</string>
    <string name="top_success">置顶成功</string>
    <string name="top_fail">置顶失败</string>
    <string name="order_success">点歌成功</string>
    <string name="order_fail">点歌失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="delete_collect_success">删除收藏成功</string>
    <string name="delete_collect_fail">删除收藏失败</string>
    <string name="please_order">请点歌</string>
    <string name="sut_song_fail">切歌失败</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="exit_room_success">退出包厢成功!</string>
    <string name="exit_room_fail">退出包厢失败!</string>
    <string name="txt_account">账号：</string>
    <string name="txt_pwd">密码：</string>
    <string name="account">我的账户</string>
    <string name="account_username">用户昵称</string>
    <string name="account_score">积分:</string>
    <string name="account_get_score">积分获取</string>
    <string name="account_quit">退出登录</string>
    <string name="account_quit_hint">您确定退出当前账号吗?</string>
    <string name="account_quit_message">您已退出当前登录</string>
    <string name="account_change_score">去兑换</string>
    <string name="account_status_score">您有积分可领取！</string>
    <string name="account_status_noscore">idx</string>
    <string name="account_all_score">0</string>
    <string name="waiting">等待中...</string>
    <string name="bind_repeating_qq">该QQ账号已被其他用户绑定,请使用其他QQ账号</string>
    <string name="bind_repeating_sina">该新浪微博账号已被其他用户绑定,请使用其他新浪微博账号</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="unbind_waiting_msg">正在解除绑定...</string>
    <string name="tip">提示</string>
    <string name="operation_failed">操作失败:</string>
    <string name="nologin">登录账户后才能继续操作,请登录</string>
    <string name="screenName_modify_tips">此昵称太受欢迎,已有人抢咯!</string>
    <string name="cant_get_score">对不起你已经不在包厢了,不能领取该积分</string>
    <string name="login_out_room">请先退出包厢</string>
    <string name="no_score_toGet">该积分已经领取过了</string>
    <string name="empty_score_tips">当前没有可领取的积分哦!</string>
    <string name="empty_score_tips_2">演唱歌曲并抢榜或包厢签到都可获得积分</string>
    <string name="sex_dialog_title">请选择</string>
    <string name="screenName_modify_empty">请填写昵称</string>
    <string name="screenName_modify_limit">昵称不能少于2个汉字或4个英文字符</string>
    <string name="screenName_modify_blank">您的昵称中含有空格,请去除空格</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_cancel">绑定取消</string>
    <string name="bind_fail">绑定失败</string>
    <string name="more_waitingDialog_msg">正在登陆</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_cancel">登录取消</string>
    <string name="login_text">其他方式登录</string>
    <string name="set_head_img">设置头像</string>
    <string name="notfind_sdcard">未找到存储卡</string>
    <string name="third_login">用户登录</string>
    <string name="third_login_sina">微博登录</string>
    <string name="third_login_qq">QQ登录</string>
    <string name="third_login_weixin">微信登陆</string>
    <string name="fealure_upload_headimg">网络不好,头像上传失败</string>
    <string name="room_password_time_out">包厢密码过期,请重新登录包厢!</string>
    <string name="room_time_out">包厢已到期</string>
    <string name="score_already_get">积分已经领取过了</string>
    <string name="score_time_out">积分已过期</string>
    <string name="score_get_success">领取成功</string>
    <string name="change_nickname">修改昵称</string>
    <string name="illegal_username_length">长度有误，请输入2-10位字符</string>
    <string name="illegal_username_value">对不起,请勿使用敏感字或特殊符号</string>
    <string name="change_username_success">修改昵称成功</string>
    <string name="username_empty">长度有误，请输入2-10位字符</string>
    <string name="username_blank">不能包含空格，请重新命名</string>
    <string name="username_has_specil">仅支持中英文，数字和"_"</string>
    <string name="illegal_username">输入的昵称不合法，请重新输入</string>
    <string name="system_message">系统消息</string>
    <string name="system_message_hint">您确定删除当前消息吗?</string>
    <string name="system_message_detail">系统消息详情</string>
    <string name="fail_get_rank_score">已经被人抢了</string>
    <string name="get_rank_success">抢榜成功!</string>
    <string name="get_rank_failure">抢榜失败!</string>
    <string name="get_rank_failure2">抢榜失败</string>
    <string name="get_rank_success_tips">快去“我的账户”领取积分吧!</string>
    <string name="get_rank_failure_tips">啊哦,被你好友抢先一步,这首歌</string>
    <string name="get_rank_failure_tips1">已经被抢先上榜了</string>
    <string name="rank_song_name">歌曲：</string>
    <string name="rank_singer">演唱：</string>
    <string name="rank_score">得分：</string>
    <string name="rank_first">抢先上榜</string>
    <string name="message_detail">系统消息详情</string>
    <string name="rank_success">抢榜成功</string>
    <string name="upload_head_img_success">头像上传成功</string>
    <string name="more_login_text">退出当前账号</string>
    <string name="more_login_empty_text">登录</string>
    <string name="menuitem_home">首页</string>
    <string name="menuitem_rank">排行榜</string>
    <string name="menuitem_chat">互动聊天</string>
    <string name="menuitem_giftexchange">礼物兑换</string>
    <string name="menuitem_consume">消费记录</string>
    <string name="menuitem_buymoney">账户充值</string>
    <string name="menuitem_songrecord">唱过的歌</string>
    <string name="menuitem_bookroom">包厢预定</string>
    <string name="menuitem_my">个人中心</string>
    <string name="menuitem_favourite">歌曲收藏</string>
    <string name="menuitem_message">消息</string>
    <string name="menuitem_setting">系统设置</string>
    <string name="text_back">回退</string>
    <string name="txt_more">更多操作</string>
    <string name="txt_song_order_list">点歌列表</string>
    <string name="txt_zero">0</string>
    <string name="chat_title">弹幕互动</string>
    <string name="hongbao_get">领取红包</string>
    <string name="hongbao_record">红包记录</string>
    <string name="room_order">包厢预订</string>
    <string name="day_hongbao_tip">(请及时领取,每天2:00清零)</string>
    <string name="chat_online">(1人)</string>
    <string name="chat_gift">礼物</string>
    <string name="chat_face">表情</string>
    <string name="chat_chat">聊天</string>
    <string name="chat_horn">喇叭</string>
    <string name="chat_edittext_tip">给当前绑定包厢发弹幕</string>
    <string name="chat_online_user">在线用户</string>
    <string name="chat_send_horn">发送喇叭</string>
    <string name="moneybag_redpacket_title">大款红包</string>
    <string name="room_redpacket_title">包厢红包</string>
    <string name="personal_redpacket_title">个人红包</string>
    <string name="chat_public">所有</string>
    <string name="chat_private">私聊</string>
    <string name="chat_system">系统</string>
    <string name="chat_around">身边</string>
    <string name="pc_title">个人中心</string>
     <string name="pc_sysaward">系统奖励</string>
    <string name="pc_getgift">收到的礼物</string>
    <string name="pc_sendgift">送出的礼物</string>
    <string name="pc_giftlog">兑换记录</string>
    <string name="pc_msg_date">00/00</string>
    <string name="pc_msg_time">00:00</string>
    <string name="pc_msg_nickname">用户昵称</string>
    <string name="pc_msg_tv1">在  </string>
    <string name="pc_msg_ktvaddr">KTV门店包厢</string>
    <string name="pc_msg_tstype">送给您</string>
    <string name="pc_msg_tstype2">您得到</string>
    <string name="pc_msg_gold"> 69999999  </string>
    <string name="pc_msg_gold2"> 99999  </string>
    <string name="pc_msg_giftinfo">朵超级玫瑰</string>
    <string name="pc_goldinfo">金币</string>
    <string name="pc_giftitem_giftname">礼物名称</string>
    <string name="pc_giftd_tv_dhnum">兑换数量为:</string>
    <string name="pc_giftnum">1</string>
    <string name="pc_giftd_tv_nedgold">所需金币:</string>
    <string name="pc_giftnedgold">8888</string>
    <string name="pc_gift_btndhuan_sure">确认兑换</string>
    <string name="pc_gift_btndhuan_cancel">取消兑换</string>
    <string name="pc_giftcount"> 1</string>
    <string name="pc_giftinfo1"> 个    价值</string>
    <string name="pc_giftgold">8888</string>
    <string name="pc_giftinfo2"> 金币</string>
    <string name="pc_gift_dhcode2">兑换码:    </string>
    <string name="pc_gift_dhcode">1652-2589-8888-888</string>
    <string name="pc_gift_imgdh">兑换状态</string>
    <string name="pc_gift_validdate2">有效期: </string>
    <string name="pc_gift_validdate_s">2015/04/16</string>
    <string name="pc_gift_info3">  -  </string>
    <string name="pc_gift_validdate_e">2015/05/16  </string>
    <string name="contentdes">图片</string>
    <string name="chat_horn_content">喇叭内容(免费):</string>
    <string name="chat_horn_tip">最多输入40个字符</string>
    <string name="chat_horn_warning">*请勿输入任何反动及人身攻击信息,一旦发现封停账号,情节严重者移交公安机关处理</string>
</resources>