<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roundedImageView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <assistant.view.RoundedImageView
        android:id="@+id/pc_msg_head"
        android:layout_width="66.33dp"
        android:layout_height="66.33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/userface_normal_b"
        roundedImageView:border_color="@color/white"
        roundedImageView:border_thickness="2dp" />

    <TextView
        android:id="@+id/pc_msg_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pc_msg_head"
        android:layout_marginLeft="7dp"
        android:text="@string/pc_msg_date"
        android:textColor="#666666"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pc_msg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pc_msg_head"
        android:layout_marginLeft="47dp"
        android:text="@string/pc_msg_time"
        android:textColor="@color/home_itemtitle"
        android:textSize="13sp"
        android:textStyle="bold" />

    <!-- 第一行 -->

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pc_msg_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_msg_nickname"
             android:textColor="@color/home_itemtext"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pc_msg_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/pc_msg_tv1"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pc_msg_ktvaddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_msg_ktvaddr"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- 第二行 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_name"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pc_msg_tstype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_msg_tstype"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pc_msg_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/pc_msg_gold"
             android:textColor="@color/home_itemtext"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pc_msg_giftinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_msg_giftinfo"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- 第三行 -->

    <LinearLayout
        android:id="@+id/ly03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_name"
        android:layout_marginTop="65dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pc_msg_tstype2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_msg_tstype2"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pc_msg_gold2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/pc_msg_gold2"
            android:textColor="@color/home_itemtext"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pc_msg_goldinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc_goldinfo"
            android:textColor="@color/home_itemtitle"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_alignLeft="@+id/ly03"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/pc_msg_date"
        android:layout_marginTop="4dp"
        android:background="@color/chat_menu_switch_separate" />

</RelativeLayout>